--- a/二轮考核/person.css
+++ b/二轮考核/person.css
@@ -56,13 +56,16 @@ header {
 }
 
 .collections .collectionList .collection .video {
-    background-color: rgba(177, 237, 189, 0.781);
+    position: relative;
+    overflow: hidden;
     width: 100%;
     aspect-ratio: 16/9;
 }
 
 .collections .collectionList .collection .video video {
-    width: 100%;
+    background-color: rgba(0, 0, 0, 0.781);
+    height: 100%;
+    aspect-ratio: 16/9;
 }
 
 /* 头像 */
@@ -85,11 +88,13 @@ header {
 }
 
 .collections .myVideos .myVideo .video {
-    background-color: rgba(177, 237, 189, 0.781);
+    position: relative;
+    overflow: hidden;
     width: 100%;
     aspect-ratio: 16/9;
 }
 
 .collections .myVideos .myVideo .video video {
     width: 100%;
+    height: 100%;
 }
