完成了投稿的界面，我的视频和收藏界面的切换

--- a/二轮考核/common.css
+++ b/二轮考核/common.css
@@ -21,7 +21,7 @@ html {
 body {
     width: 100hw;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
 }
 
 /* 版心 */
