--- a/二轮考核/person.css
+++ b/二轮考核/person.css
@@ -60,6 +60,45 @@ header {
     display: inline;
 }
 
+
+/* 左右两栏 */
+.content {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+.content .edit {
+    flex-basis: 20%;
+    flex-grow: 0.2;
+
+}
+
+.content .collections {
+    width: 0;
+    min-width: 700px;
+    /* 添加width：0让这个盒子的宽度由flex决定 */
+    flex-basis: 80%;
+    flex-grow: 0;
+    display: flex;
+    flex-flow: column nowrap;
+
+}
+
+/* 默认收藏夹 */
+.collections .default {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.collections .default .box {
+    position: relative;
+    overflow: hidden;
+    width: 19%;
+    margin: 0.5%;
+    aspect-ratio: 16/9;
+}
+
 /* 收藏的内容 */
 .collections .collectionList {
     display: flex;
@@ -115,4 +154,35 @@ header {
 .collections .myVideos .myVideo .video video {
     width: 100%;
     height: 100%;
+}
+
+.myVideo.content {
+    display: none;
+}
+
+/* 投稿模态框 */
+.inputTitle {
+    position: fixed;
+    top: calc(50% - 100px);
+    left: calc(50% - 300px);
+    width: 600px;
+    height: 200px;
+    background-color: rgb(255, 255, 255);
+}
+
+.inputTitleMask {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    content: "";
+    background-color: rgba(230, 9, 9, 0.09);
+}
+
+.inputTitle .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
