--- a/二轮考核/index.css
+++ b/二轮考核/index.css
@@ -9,7 +9,7 @@ header {
 header #logo {
     position: absolute;
     bottom: 0px;
-    left: 10px;
+    left: 5%;
     height: 100px;
     width: 200px;
     background: url(http://localhost:5500/二轮考核/image/logo.png) center center no-repeat;
@@ -124,18 +124,14 @@ header #logo {
 }
 
 
-.content .ready {
-    position: relative;
-    overflow: hidden;
-    margin-top: 10px;
-}
+
 
 /* 预设加载动画 */
 .content .loading {
     position: relative;
     overflow: hidden;
     margin-top: 10px;
-
+    height: 290px;
 }
 
 .content .loading div {
@@ -202,10 +198,14 @@ header #logo {
 /*首页 视频模块 */
 .content section {
     width: 18%;
-    height: 290px;
     margin-bottom: 15px;
 }
 
+.content .ready {
+    position: relative;
+    overflow: hidden;
+    margin-top: 10px;
+}
 
 .ready .video {
     position: relative;
@@ -227,6 +227,7 @@ header #logo {
     top: 10px;
     right: 10px;
     color: #fff;
+    font-size: 30px;
     opacity: 0;
     transition: 0.2s;
 }
@@ -244,9 +245,11 @@ header #logo {
 
     width: 100%;
     height: 40px;
+    line-height: 20px;
     padding: 10px;
 
     color: white;
+    font-size: 1.5rem;
     opacity: 1;
     background-image: linear-gradient(transparent, rgba(0, 0, 0, 0.73));
     transition: all 0.3s;
